Credit Commons Grafting and Last Hash Auth
