# accounting/src/federation/creditcommons/routes.ts
@@ -1,10 +1,17 @@
-import { Router } from "express";
-import { SharedController } from "src/controller";
-import { noAuth } from "src/server/auth";
-import { asyncHandler } from "src/server/handlers";
+import { Router } from 'express';
+import { checkExact } from 'express-validator';
+import { CreditCommonsTrunkwardNode, CreditCommonsTransaction } from 'src/model';
+import { SharedController } from 'src/controller';
+import { Scope, userAuth, lastHashAuth } from 'src/server/auth';
+import { currencyInputHandler, currencyResourceHandler } from 'src/server/handlers';
+import { CreditCommonsValidators } from './validation';
+import {
+  CreditCommonsTrunkwardNodeSerializer,
+  CreditCommonsMessageSerializer
+} from './serialize';
 
 /**
- * Implement the routes for the credit commons federation protocol
+ * Implements the routes for the credit commons federation protocol
  * https://gitlab.com/credit-commons/cc-php-lib/-/blob/master/docs/credit-commons-openapi3.yml
  * 
  * @param controller 
@@ -13,12 +20,20 @@ export function getRoutes(controller: SharedController) {
   const router = Router()
 
   /**
-   * Propose transaction.
+   * Retrieve a welcome message. Requires last-hash auth.
    */
-  router.post('/transaction', noAuth(), asyncHandler(async (req, res) => {
-    // TODO
-    res.status(200).json({ message: 'Welcome to the Credit Commons federation protocol.' })
-  }))
+  router.get('/:code/', lastHashAuth(), currencyResourceHandler(controller, async (currencyController, ctx) => {
+    return await currencyController.creditCommons.getWelcome(ctx);
+  }, CreditCommonsMessageSerializer, {}))
+
+  /**
+   * Configure the trunkward CC node. Requires admin.
+   */
+  router.post('/:code/graft', userAuth(Scope.Accounting), checkExact(CreditCommonsValidators.isGraft()),
+    currencyInputHandler(controller, async (currencyController, ctx, data: CreditCommonsTrunkwardNode) => {
+      return await currencyController.creditCommons.createTrunkwardNode(ctx, data.ccNodeName, data.lastHash)
+    }, CreditCommonsTrunkwardNodeSerializer, 201)
+  )
 
   return router
 }
