# accounting/src/federation/creditcommons/validation.ts
@@ -1,0 +1,8 @@
+import { body } from "express-validator"
+
+export namespace CreditCommonsValidators {
+  export const isGraft = () => [
+    body("data.attributes.ccNodeName").isString(),
+    body("data.attributes.lastHash").isString(),
+  ]
+}
