# accounting/src/model/creditCommons.ts
@@ -1,0 +1,17 @@
+export interface CreditCommonsTrunkwardNode {
+  ccNodeName: string,
+  lastHash: string,
+}
+
+export interface CreditCommonsTransaction {
+  payer: string,
+  payee: string,
+  quant: number,
+  description: string,
+  workflow: string,
+  metadata: {
+    payer_name?: string,
+    inside_leg?: number,
+    category?: string,
+  }
+}
